--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -16,4 +16,4 @@ phases:
 artifacts:
   files:
     - '**/*'
-  base-directory: 'target/my-web-app'
+  base-directory: 'target/camunda-beanstalk-1.0-SNAPSHOT-zip'
