--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -14,5 +14,6 @@ phases:
         commands:
             - mvn package
 artifacts:
-  files:
-    - '**/*'
+    files:
+        - '**/*'
+    base-directory: 'target/camunda-beanstalk-1.0-SNAPSHOT-zip.zip'
