--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -12,6 +12,7 @@ phases:
     post_build:
         commands:
             - mvn package
+            - ls -R /root/.m2/
 artifacts:
     files:
         - '**/*'
