--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -12,7 +12,7 @@ phases:
     post_build:
         commands:
             - mvn package
-            - ls -R /root/.m2/
+            - find / *camunda-beanstalk*
 artifacts:
     files:
         - '**/*'
