--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -14,5 +14,5 @@ phases:
 artifacts:
     files:
         - '**/*'
-    base-directory: 'camunda*'
+    base-directory: 'camunda-beanstalk-1.0-SNAPSHOT-zip'
     discard-paths: yes
