--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -14,4 +14,5 @@ phases:
 artifacts:
     files:
         - 'camunda-beanstalk-1.0-SNAPSHOT-zip/*'
+        - 'camunda-beanstalk-1.0-SNAPSHOT-zip/.ebextensions'
     base-directory: 'target'
