--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -14,4 +14,4 @@ phases:
 artifacts:
     files:
         - '**/*'
-    base-directory: 'camunda-beanstalk-1.0-SNAPSHOT-zip'
+    base-directory: 'target/camunda-beanstalk-1.0-SNAPSHOT-zip'
