--- a/pom.xml
+++ b/pom.xml
@@ -69,12 +69,18 @@
     </build>
 
     <repositories>
+	
         <repository>
             <id>camunda-bpm-nexus</id>
             <name>camunda-bpm-nexus</name>
-            <url>
-                https://app.camunda.com/nexus/content/groups/public
-            </url>
-        </repository>
+            <url>https://app.camunda.com/nexus/content/groups/public/</url>
+        </repository> 	
+	
+		<repository>
+			<id>infra-camunda</id>
+			<url>https://github.com/CapBPM/infra-camunda/blob/master/</url>
+		</repository>
+		
     </repositories>
+
 </project>
