--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -6,6 +6,7 @@ phases:
         commands:
     build:
         commands:
+            - mvn clean install
     post_build:
         commands:
             - mvn package
