--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -4,13 +4,12 @@ phases:
         commands:
     pre_build:
         commands:
-            - mkdir -p /root/.m2/repository/org/camunda/bpm/camunda-distro/7.10.0/
-            - curl -o /root/.m2/repository/org/camunda/bpm/camunda-distro/7.10.0/camunda-distro-7.10.0.zip https://s3.us-east-2.amazonaws.com/camunda.distro/camunda-distro-7.10.0.zip
             - ls /root/.m2/repository/org/camunda/bpm/camunda-distro/7.10.0/
     build:
         commands:
     post_build:
         commands:
+            - ls /root/.m2/repository/org/camunda/bpm/camunda-distro/7.10.0/
             - mvn package
 artifacts:
     files:
