--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -8,9 +8,12 @@ phases:
         commands:
     post_build:
         commands:
-            - mvn clean package -U
+            - mvn package
             - ls /root/.m2/repository/org/camunda/bpm/camunda-distro/7.10.0/
 artifacts:
     files:
         - '**/*'
     base-directory: 'target/camunda-beanstalk-1.0-SNAPSHOT-zip'
+cache:
+  paths:
+    - '/root/.m2/**/*'
