--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -8,7 +8,7 @@ phases:
         commands:
     post_build:
         commands:
-            - mvn package
+            - mvn package -DskipTests
             - ls /root/.m2/repository/org/camunda/bpm/camunda-distro/7.10.0/
 artifacts:
     files:
