--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -9,7 +9,8 @@ phases:
         commands:
     post_build:
         commands:
-            - mvn package
+            - 
+            - mvn deploy
 artifacts:
     files:
         - '**/*'
