--- a/cd/buildspec-test.yml
+++ b/cd/buildspec-test.yml
@@ -5,12 +5,12 @@ phases:
             - cp ./cd/settings.xml /root/.m2/settings.xml
     pre_build:
         commands:
+            - mvn clean install
     build:
         commands:
+            - mvn clean install
     post_build:
         commands:
-            - 
-            - mvn deploy
 artifacts:
     files:
         - '**/*'
