--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,9 @@
                 <artifactId>maven-assembly-plugin</artifactId>
 				<version>3.1.1</version>
                 <configuration>
+                    <descriptors>
+						<descriptor>src/assembly/src.xml</descriptor>
+					</descriptors>
                     <finalName>${project.artifactId}-${project.version}</finalName>
                 </configuration>
                 <executions>
