--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 				<version>3.1.1</version>
                 <configuration>
                     <descriptors>
-						<descriptor>src/assembly/src.xml</descriptor>
+						<descriptor>src/assembly/zip.xml</descriptor>
 					</descriptors>
                     <finalName>${project.artifactId}-${project.version}</finalName>
                 </configuration>
