--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
 artifacts:
     files:
         - '**/*'
-    base-directory: 'target/*'
+    base-directory: 'target/camunda-beanstalk-1.0-SNAPSHOT-zip'
 cache:
   paths:
     - '/root/.m2/**/*'
