--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
             <artifactId>postgresql</artifactId>
             <version>42.2.5</version>
         </dependency>
+		
+		<dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+		
         <!-- Camunda distribution (we need this so we can get the required camunda libs) -->
         <dependency>
             <groupId>org.camunda.bpm</groupId>
