--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <version>2.1.2</version>
         </dependency>
 		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.6</version>
+		</dependency>
+		
         <!-- Camunda distribution (we need this so we can get the required camunda libs) -->
         <dependency>
             <groupId>org.camunda.bpm</groupId>
