--- a/.ebextensions/03-configure-tomcat.config
+++ b/.ebextensions/03-configure-tomcat.config
@@ -5,5 +5,7 @@ commands:
         command: "source /tmp/eb_env.sh ; cp /tmp/server.xml $TOMCAT_CONF/server.xml"
     03-configure-tomcat-copy-bpm-platform-xml:
         command: "source /tmp/eb_env.sh ; cp /tmp/.ebextensions/tomcat/conf/bpm-platform.xml $TOMCAT_HOME/conf"
-    04-configure-tomcat-copy-lib:
+	04-configure-tomcat-copy-bpm-platform-xml:
+        command: "source /tmp/eb_env.sh ; cp /tmp/.ebextensions/tomcat/conf/logging.properties $TOMCAT_HOME/conf"
+    05-configure-tomcat-copy-lib:
         command: "source /tmp/eb_env.sh ; cp /tmp/.ebextensions/tomcat/lib/* $TOMCAT_HOME/lib" 
